--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,69 +1,89 @@
-﻿@using X.PagedList 
-@using X.PagedList.Mvc.Core 
-@using X.PagedList.Web.Common 
+﻿@using X.PagedList
+@using X.PagedList.Mvc.Core
+@using X.PagedList.Web.Common
 @using DearCoder.Services
 
 @model IPagedList<Blog>
 @inject IFileService _fileService
 
-@{ 
+@{
     ViewData["Title"] = "Landing Page";
 }
 <!--Copy body of template landing page here-->
 <!-- main content-->
 <div class="container">
-<div class="h1 font-weight-bold">
-    Blog Categories
-</div>
-    <hr/>
+    <div class="h1 font-weight-bold Oz">
+        Blog Categories
+    </div>
+    <hr />
     <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
+        <div class="col-lg-8 col-md-10">
             @foreach (var blog in Model.OrderByDescending(c => c.Created))
             {
                 <div class="post-preview row">
                     <div class="col">
-                        <a href="post.html">
-                            <h2 class="post-title">@blog.Name</h2>
-                            <h3 class="post-subtitle">@blog.Description</h3>
+                        <a asp-controller="Posts" asp-action="BlogPostIndex" asp-route-id="@blog.Id">
+                            <h1 class="post-title Oz">@blog.Name</h1>
+                            <h4 class="font-weight-light Oz">@blog.Description</h4>
                         </a>
-                        <p class="post-meta">
+                        <p class="post-meta Enriqueta font-weight-light">
                             posted by
-                            <a href="https://kaseywahl.io/about.html" target="_blank">Kasey Wahl</a>
+                            <a class="Enriqueta" href="https://kaseywahl.io/about.html" target="_blank">Kasey Wahl</a>
                             on @blog.Created.ToString("MMM, dd, yyyy")
                         </p>
                         <div class="col">
-                            <a class="btn btn-dark btn-sm btn-block" asp-controller="Posts" asp-action="BlogPostIndex" asp-route-id="@blog.Id">Read Posts</a>
+                            <a class="btn btn-dark btn-sm btn-block Oz" asp-controller="Posts" asp-action="BlogPostIndex" asp-route-id="@blog.Id">Read Posts</a>
                         </div>
                     </div>
                     <div class="col">
-                        <img id="BlogImage" class="img-fluid" src=" @_fileService.DecodeImage(blog.Image, blog.ContentType)" />
+                        <img id="BlogImage" class="img-fluid" style="width:18rem; height:14rem;" src=" @_fileService.DecodeImage(blog.Image, blog.ContentType)" />
                     </div>
                 </div>
                 <hr />
             }
-
-
             <hr />
-            <!-- pager-->
-            <div class="clearfix"><a class="btn btn-primary float-right" href="#!">older posts →</a></div>
+        </div>
+
+        <!-- Side widgets-->
+        <div class="col-lg-4">
+            <!-- Search widget-->
+            <div class="card mb-4">
+                <div class="card-header Oz">Search</div>
+                <div class="card-body">
+                    <form asp-action="SearchIndex" asp-controller="Posts">
+                        <div class="input-group">
+                            <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
+                            <button class="btn-sm btn-primary btn-block Oz" id="button-search" type="submit">Search</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+            <!-- Side widget-->
+            <div class="card mb-4">
+                <div class="card-header">Side Widget</div>
+                <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use, and feature the Bootstrap 5 card component!</div>
+            </div>
         </div>
     </div>
 </div>
 <hr />
 
+
+<!-- Page List pager-->
 <div class="row">
-    <div class="col h4">
-        Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount 
+    <div class="col h4 Oz">
+        Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
     </div>
 </div>
 
 <div class="row">
-    <div class="col">
+    <div class="col Oz">
         @Html.PagedListPager(Model, page => Url.Action("Index", new { page = page }),
             new PagedListRenderOptions
             {
-                LiElementClasses = new string[] {"page-item"},
-                PageClasses = new String[] {"page-link"}
+                LiElementClasses = new string[] { "page-item" },
+                PageClasses = new String[] { "page-link" }
             })
     </div>
 </div>
