--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,14 +13,16 @@
         <!-- google fonts-->
         <link href="//fonts.googleapis.com/css?family=lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="//fonts.googleapis.com/css?family=open+sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css2?family=Enriqueta:wght@400;600&display=swap" rel="stylesheet">
         <!-- core theme css (includes bootstrap)-->
         <link href="~/css/styles.css" rel="stylesheet" />
-<link href="~/css/summernote-bs4.css" rel="stylesheet" />
+        <link href="~/css/summernote-bs4.css" rel="stylesheet" />
+        <link href="~/css/CustomStyle.css" rel="stylesheet" />
 
     </head>
     <body>
         <!-- navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainnav">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand text-dark" asp-controller="Home" asp-action="Index">Dear Coder</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarresponsive" aria-controls="navbarresponsive" aria-expanded="false" aria-label="toggle navigation">
@@ -47,20 +49,16 @@
             </div>
         </nav>
         <!-- page header-->
-        <header class="masthead" style="background-image: url('../../img/letterhead.jpg')">
+        <header class="masthead" style="background-image: url('../../img/parchment_1.jpg')">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-md-10 mx-auto">
                         <div class="site-heading">
-                            <h1 class="text-dark">@ViewData["HeaderText"]</h1>
-                            <span class="subheading text-dark font-weight-bold">@ViewData["SubheaderText"]</span>
-
-                            @*This is where I will collect the search searchString*@
-                        <form asp-action="SearchIndex" asp-controller="Posts">
-                            <input class="form-control" type="text" name="SearchString" placeholder="Enter search term" />
-                            <button class="btn-sm btn-dark btn-block" type="submit">Search</button>
-                        </form>
+                            <h1 class="text-dark Enriqueta mb-1">@ViewData["HeaderText"],</h1>
+                            <br />
+                            <br />
+                            <span class="subheading text-dark font-weight-bold Enriqueta">@ViewData["SubheaderText"]</span>
                         </div>
                     </div>
                 </div>
@@ -104,7 +102,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <p class="copyright text-muted">Copyright &copy; Dear Coder 2021</p>
+                        <p class="copyright text-muted Enriqueta">Copyright &copy; Dear Coder 2021</p>
                     </div>
                 </div>
             </div>
@@ -123,5 +121,12 @@
         <!-- Core theme JS-->
         <script src="~/js/scripts.js"></script>
         @await RenderSectionAsync("Scripts", required: false)
+        <!-- You can create custom sections by including them on a view -->
+        <!-- The following section is for demo purposes and should not go live -->
+        <!-- By setting the required attribute to false we tell the code that it is okay if the View does not have this section-->
+       
+<!-- If you forget to set required: false you will throw errors on any View that doesn't have a section with that name-->
+        @await RenderSectionAsync("HelloKasey", required: false) 
+
     </body>
 </html>
