--- a/Views/Posts/Details.cshtml
+++ b/Views/Posts/Details.cshtml
@@ -63,21 +63,28 @@
                             else
                             {
                                 <h4>@comment.Author.FullName</h4> <small>posted on @comment.Created.ToString("MMM dd, yyyy")</small>
-                                <h4>This comment has been moderated because of its @comment.ModerationType</h4>
+                                <p class="text-muted font-italic">This comment has been moderated because of its @comment.ModerationType</p>
                             }
 
                         </div>
                         <div>
-                            <p>@comment.Body</p>
+                            <div class="w-100"><p>@Html.Raw(comment.Body)</p></div>
+                            <hr />
                             @if (User.IsInRole("Administrator") || User.IsInRole("Moderator") || (comment.Moderated is null && userManager.GetUserId(User) == comment.AuthorId))
                             {
-                                <!-- Button trigger modal -->
+                                <!-- Button trigger EDIT modal -->
                                 //Ties the button to the modal through the PK of the comment
-                                <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#edit-@comment.Id">
+                                <button type="button" class="btn-sm btn-dark" data-toggle="modal" data-target="#edit-@comment.Id">
                                     Edit Comment
                                 </button>
 
-                                <!-- Modal -->
+                                <!-- Button trigger DELETE modal -->
+                                <button type="button" class="btn-sm btn-danger" data-toggle="modal" data-target="#delete-@comment.Id">
+                                    Delete Comment
+                                </button>
+                                <hr />
+
+                                <!-- EDIT Modal -->
                                 //Same Id structure as the button
                                 <div class="modal fade" id="edit-@comment.Id" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                     <div class="modal-dialog">
@@ -130,6 +137,44 @@
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- DELETE Modal -->
+                                <div class="modal fade" id="delete-@comment.Id" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title Oz" id="exampleModalLabel">Delete Comment</h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <form asp-controller="Comments" asp-action="Delete" enctype="multipart/form-data">
+                                                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                                    <input type="hidden" asp-for="@comment.Id" />
+                                                    <input type="hidden" name="id" value="@comment.Id" />
+                                                    <input type="hidden" asp-for="@comment.PostId" />
+                                                    <input type="hidden" asp-for="@comment.AuthorId /">
+                                                    <input type="hidden" asp-for="@comment.Created" />
+
+                                                    
+                                                        <div class="form-group">
+                                                            <p>Are you sure you want to delete this comment?</p>
+                                                        </div>
+                                                    
+                                                        <div class="form-group text-center">
+                                                            <hr/>
+                                                            <input type="submit" value="Delete" class="btn rounded btn-danger" />
+                                                            <button type="button" class="btn rounded btn-secondary" data-dismiss="modal">Cancel</button>
+                                                        </div>
+                                                </form>
+                                            </div>
+                                            <div class="modal-footer">
+
                                             </div>
                                         </div>
                                     </div>
