Added author widget.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -59,10 +59,18 @@
                 </div>
             </div>
 
-            <!-- Side widget-->
+            <!-- Author widget-->
             <div class="card mb-4">
-                <div class="card-header">Side Widget</div>
-                <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use, and feature the Bootstrap 5 card component!</div>
+                <div class="card-header">About Kasey</div>
+                <div class="card-body">
+                    I love to make cool things with great people.
+                    <br />
+                    <br />
+                    Let's grab a coffee and chat! (In person or Zoom).
+                    <br />
+                    <br />
+                    Connect with me on <a href="https://github.com/Piaomu" target="_blank"><span class="text-info">Github,</span> </a> <a href="https://www.linkedin.com/in/kasey-wahl-24073084/" target="_blank"><span class="text-info">LinkedIn</span></a>, <a href="https://twitter.com/KaseyWahl8" target="_blank"><span class="text-info">Twitter</span></a>, or my personal website, <a href="https://kaseywahl.io/" target="_blank"> <span class="text-info">kaseywahl.io</span></a>.
+                </div>
             </div>
         </div>
     </div>
