--- a/Views/Posts/BlogPostIndex.cshtml
+++ b/Views/Posts/BlogPostIndex.cshtml
@@ -64,7 +64,7 @@
 
             <!-- Author widget-->
             <div class="card mb-4">
-                <div class="card-header">About Kasey</div>
+                <div class="card-header Oz">About Kasey</div>
                 <div class="card-body">
                     I love to make cool things with great people.
                     <br />
