--- a/Views/Posts/Details.cshtml
+++ b/Views/Posts/Details.cshtml
@@ -51,7 +51,7 @@
             <div class="btn-sm btn-dark btn-block Oz h4">@Model.Post.Comments.Count Comment(s)</div>
             @foreach (var comment in Model.Post.Comments)
             {
-                <div class="d-flex mb-4">
+                <div class="d-flex mb-4 card p-4 mb-0">
                     <!-- Parent comment-->
                     <div class="flex-shrink-0 media p-3"><img class="rounded-circle img-fluid" style="width:60px;" src="@_fileService.DecodeImage(comment.Author.ImageData, comment.Author.ContentType)" alt="@comment.Author.FullName" /></div>
                     <div class="ms-3">
@@ -68,8 +68,11 @@
 
                         </div>
                         <div>
-                            <div class="w-100"><p>@Html.Raw(comment.Body)</p></div>
-                            <hr />
+                            <div class="w-100">
+                                <hr/>
+                            <p>@Html.Raw(comment.Body)</p>
+
+                            </div>
                             @if (User.IsInRole("Administrator") || User.IsInRole("Moderator") || (comment.Moderated is null && userManager.GetUserId(User) == comment.AuthorId))
                             {
                                 <!-- Button trigger EDIT modal -->
@@ -82,7 +85,6 @@
                                 <button type="button" class="btn-sm btn-danger" data-toggle="modal" data-target="#delete-@comment.Id">
                                     Delete Comment
                                 </button>
-                                <hr />
 
                                 <!-- EDIT Modal -->
                                 //Same Id structure as the button
@@ -131,12 +133,12 @@
                                                         </div>
                                                     }
                                                     <div class="form-group">
-                                                        <input type="submit" value="Save" class="btn btn-primary" />
+                                                        <input type="submit" value="Save" class="btn btn-primary rounded" />
                                                     </div>
                                                 </form>
                                             </div>
                                             <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                                <button type="button" class="btn btn-dark rounded" data-dismiss="modal">Close</button>
                                             </div>
                                         </div>
                                     </div>
@@ -167,9 +169,8 @@
                                                         </div>
                                                     
                                                         <div class="form-group text-center">
-                                                            <hr/>
                                                             <input type="submit" value="Delete" class="btn rounded btn-danger" />
-                                                            <button type="button" class="btn rounded btn-secondary" data-dismiss="modal">Cancel</button>
+                                                            <button type="button" class="btn rounded btn-dark" data-dismiss="modal">Cancel</button>
                                                         </div>
                                                 </form>
                                             </div>
@@ -185,7 +186,6 @@
                             }
                         </div>
                     </div>
-                    <hr />
                 </div>
             }
 
@@ -231,7 +231,7 @@
 
                                 <ul class="list-unstyled mb-0">
 
-                                    <li><a class="badge bg-secondary text-decoration-none link-light" asp-action="BlogPostIndex" asp-route-id="@blog.Id">@blog.Name</a></li>
+                                    <li><a class="badge bg-dark text-decoration-none link-light text-light" asp-action="BlogPostIndex" asp-route-id="@blog.Id">@blog.Name</a></li>
 
                                 </ul>
 
@@ -240,10 +240,18 @@
                     </div>
                 </div>
             </div>
-            <!-- Side widget-->
+            <!-- Author widget-->
             <div class="card mb-4">
-                <div class="card-header">Side Widget</div>
-                <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use, and feature the Bootstrap 5 card component!</div>
+                <div class="card-header Oz">About Kasey</div>
+                <div class="card-body">
+                    I love to make cool things with great people.
+                    <br />
+                    <br />
+                    Let's grab a coffee and chat! (in person or on Zoom).
+                    <br />
+                    <br />
+                    Connect with me on <a href="https://github.com/Piaomu" target="_blank"><span class="text-info">Github,</span> </a> <a href="https://www.linkedin.com/in/kasey-wahl-24073084/" target="_blank"><span class="text-info">LinkedIn</span></a>, <a href="https://twitter.com/KaseyWahl8" target="_blank"><span class="text-info">Twitter</span></a>, or my personal website, <a href="https://kaseywahl.io/" target="_blank"> <span class="text-info">kaseywahl.io</span></a>.
+                </div>
             </div>
         </div>
     </div>
