--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
         <!-- navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand text-dark" asp-controller="Home" asp-action="Index">Dear Coder</a>
+                <a class="navbar-brand text-dark Oz" asp-controller="Home" asp-action="Index">Dear Coder</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarresponsive" aria-controls="navbarresponsive" aria-expanded="false" aria-label="toggle navigation">
                     menu
                     <i class="fas fa-bars"></i>
@@ -32,15 +32,15 @@
                 <div class="collapse navbar-collapse" id="navbarresponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark Oz" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         @if (User.IsInRole("Administrator"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Blogs" asp-action="Create">Create Blog</a>
+                                <a class="nav-link text-dark Oz" asp-area="" asp-controller="Blogs" asp-action="Create">Create Blog</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="Create">Create Post</a>
+                                <a class="nav-link text-dark Oz" asp-area="" asp-controller="Posts" asp-action="Create">Create Post</a>
                             </li>
                         }
                     </ul>
