--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Dear Coder | Tech Letters from Kasey</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/png" href="~/img/favicon-32x32.png"/>
         <!-- font awesome icons (free version)-->
         <script src="//use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
         <!-- google fonts-->
@@ -24,7 +24,7 @@
         <!-- navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand text-dark Oz" asp-controller="Home" asp-action="Index">Dear Coder</a>
+                <a class="navbar-brand text-dark Oz" asp-controller="Home" asp-action="Index"><img src="~/img/dear_coder_logo_60x60.png" /></a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarresponsive" aria-controls="navbarresponsive" aria-expanded="false" aria-label="toggle navigation">
                     menu
                     <i class="fas fa-bars"></i>
@@ -51,6 +51,7 @@
         <!-- page header-->
         <header class="masthead" style="background-image: url('../../img/parchment_1.jpg')">
             <div class="overlay"></div>
+
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-md-10 mx-auto">
@@ -119,7 +120,14 @@
             });
         </script>
 
- <!-- Summer Note - Responsive image fix -->    <script>        $(document).ready(function () {            $("img").addClass("img-fluid");            $("img").parent("span").css("width", "auto");            $("img").parent("span").css("height", "auto");        });    </script>
+ <!-- Summer Note - Responsive image fix -->
+    <script>
+        $(document).ready(function () {
+            $("img").addClass("img-fluid");
+            $("img").parent("span").css("width", "auto");
+            $("img").parent("span").css("height", "auto");
+        });
+    </script>
 
         <!-- Core theme JS-->
         <script src="~/js/scripts.js"></script>
