Hide pagination if only one page.

--- a/Views/Posts/SearchIndex.cshtml
+++ b/Views/Posts/SearchIndex.cshtml
@@ -45,6 +45,9 @@
 </div>
 <hr />
 
+<!--Paged List Pager-->
+@if (Model.PageCount > 1)
+{
 <div class="row">
     <div class="col h3">
         Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
@@ -53,11 +56,12 @@
 
 <div class="row">
     <div class="col">
-        @Html.PagedListPager(Model, page => Url.Action("SearchIndex", new { page = page, searchString = ViewData["SearchString"]}),
-            new PagedListRenderOptions
-            {
-                LiElementClasses = new string[] { "page-item" },
-                PageClasses = new String[] { "page-link" }
-            })
+        @Html.PagedListPager(Model, page => Url.Action("SearchIndex", new { page = page, searchString = ViewData["SearchString"] }),
+             new PagedListRenderOptions
+             {
+                 LiElementClasses = new string[] { "page-item" },
+                 PageClasses = new String[] { "page-link" }
+             })
     </div>
 </div>
+}
