--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -77,8 +77,13 @@
 </div>
 <hr />
 
-
 <!-- Page List pager-->
+@if (Model.PageCount > 1)
+{
+
+}
+else
+{
 <div class="row">
     <div class="col h4 Oz">
         Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
@@ -88,10 +93,11 @@
 <div class="row">
     <div class="col Oz">
         @Html.PagedListPager(Model, page => Url.Action("Index", new { page = page }),
-            new PagedListRenderOptions
-            {
-                LiElementClasses = new string[] { "page-item" },
-                PageClasses = new String[] { "page-link" }
-            })
+             new PagedListRenderOptions
+             {
+                 LiElementClasses = new string[] { "page-item" },
+                 PageClasses = new String[] { "page-link" }
+             })
     </div>
 </div>
+}
