--- a/Views/Posts/BlogPostIndex.cshtml
+++ b/Views/Posts/BlogPostIndex.cshtml
@@ -79,22 +79,25 @@
 
     </div>
     <!-- Paged List pager-->
-    <div class="row">
-        <div class="col h4 Oz">
-            Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+    @if (Model.PageCount > 1)
+    {
+        <div class="row">
+            <div class="col h4 Oz">
+                <p>Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount</p>
+            </div>
         </div>
-    </div>
 
     <div class="row">
         <div class="col Oz">
             @Html.PagedListPager(Model, page => Url.Action("BlogPostIndex", new { id = @Model.FirstOrDefault()?.BlogId, page = page }),
-                new PagedListRenderOptions
-                {
-                    LiElementClasses = new string[] { "page-item" },
-                    PageClasses = new String[] { "page-link" }
-                })
+                  new PagedListRenderOptions
+                  {
+                      LiElementClasses = new string[] { "page-item" },
+                      PageClasses = new String[] { "page-link" }
+                  })
         </div>
     </div>
+    }
 </div>
 <hr />
 
