--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 }
 <!--Copy body of template landing page here-->
 <!-- main content-->
-<div class="container">
+<div class="container-fluid">
     <div class="h1 font-weight-bold Oz">
         Blog Categories
     </div>
