--- a/Views/Posts/BlogPostIndex.cshtml
+++ b/Views/Posts/BlogPostIndex.cshtml
@@ -10,43 +10,67 @@
 }
 <!--Copy body of template landing page here-->
 <!-- main content-->
-<div class="container">
+<div class="container-fluid">
     <div class="row">
-        <div class="col-lg-8 col-md-10">
-            <h1 class="mb-3">
-                <!--WHY CAN'T I GET THIS TO DISPLAY? DO I NEED TO USE A VIEWMODEL AGAIN? Okay, I know it's because I'm using the IEnumerable interface,
-                and that's iterating over all the instances of posts, but all of them on this page share the same foreign key, so how can I access that
-                property alone and display it?-->
-                At post.BlogId
-            </h1>
-            <hr />
-            @foreach (var post in Model.OrderByDescending(c => c.Created))
-            {
-                <div class="post-preview row">
-                    <div class="col">
-                        <a asp-controller="Posts" asp-action="Details" asp-route-slug="@post.Slug">
-                            <h2 class="post-title">@post.Title</h2>
-                            <h3 class="font-weight-light">@post.Abstract</h3>
-                        </a>
-                        <p class="post-meta font-weight-light">
-                            posted by
-                            <a href="https://kaseywahl.io/about.html" target="_blank">Kasey Wahl</a>
-                            on @post.Created.ToString("MMM, dd, yyyy")
-                        </p>
-                        <div class="col">
-                            <a class="btn btn-dark btn-sm btn-block Oz" asp-controller="Posts" asp-action="Details" asp-route-slug="@post.Slug">Read Full Post</a>
+            <div class="col-lg-8 col-md-10">
+                <div class="row">
+                    @foreach (var post in Model.OrderByDescending(c => c.Created))
+                    {
+                        <div class="col-lg-6 mx-auto">
+                            <div class="card mt-2 h-100">
+                                <div class="card-body">
+                                    <div>
+                                        <a asp-controller="Posts" asp-action="Details" asp-route-slug="@post.Slug">
+                                            <h2 class="post-title Oz text-center">@post.Title</h2>
+                                            <hr />
+                                            <h4 class="font-weight-light Oz">@post.Abstract</h4>
+                                        </a>
+                                        <hr />
+                                        <p class="post-meta font-weight-light text-muted font-italic m-0">
+                                            posted by
+                                            <a href="https://kaseywahl.io/about.html" target="_blank">Kasey Wahl</a>
+                                            on @post.Created.ToString("MMM, dd, yyyy")
+                                        </p>
+                                    </div>
+                                    <div class="card-footer">
+                                        <img id="BlogImage" class="card-img" src="@_fileService.DecodeImage(post.ImageData, post.ContentType)" />
+                                    </div>
+                                </div>
+                                <a class="btn btn-dark btn-sm btn-block Oz" asp-controller="Posts" asp-action="Details" asp-route-slug="@post.Slug">Read Full Post</a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col">
-                        <img id="BlogImage" class="img-fluid" style="width:18rem; height:18rem;" src=" @_fileService.DecodeImage(post.ImageData, post.ContentType)" />
-                    </div>
+                    }
                 </div>
                 <hr />
-            }
+            </div>
 
+
+
+            @*<hr />
+        @foreach (var post in Model.OrderByDescending(c => c.Created))
+        {
+            <div class="post-preview row">
+                <div class="col">
+                    <a asp-controller="Posts" asp-action="Details" asp-route-slug="@post.Slug">
+                        <h2 class="post-title">@post.Title</h2>
+                        <h3 class="font-weight-light">@post.Abstract</h3>
+                    </a>
+                    <p class="post-meta font-weight-light">
+                        posted by
+                        <a href="https://kaseywahl.io/about.html" target="_blank">Kasey Wahl</a>
+                        on @post.Created.ToString("MMM, dd, yyyy")
+                    </p>
+                    <div class="col">
+                        <a class="btn btn-dark btn-sm btn-block Oz" asp-controller="Posts" asp-action="Details" asp-route-slug="@post.Slug">Read Full Post</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <img id="BlogImage" class="img-fluid" style="width:18rem; height:18rem;" src=" @_fileService.DecodeImage(post.ImageData, post.ContentType)" />
+                </div>
+            </div>
             <hr />
+        }*@
 
-        </div>
         <!-- Side widgets-->
         <div class="col-lg-4">
             <!-- Search widget-->
