--- a/Views/Posts/Details.cshtml
+++ b/Views/Posts/Details.cshtml
@@ -12,7 +12,7 @@
 
 
 <!-- Page content-->
-<div class="container mt-5">
+<div class="container-fluid mt-5">
     <div class="row">
         <div class="col-lg-8">
             <!-- Post content-->
