--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -12,9 +12,9 @@
     <li class="nav-item navbar-nav ml-auto">
         <a  class="nav-link text-dark Oz" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @user.GivenName!</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item p-0 pt-2">
         <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button type="submit" class="nav-link btn btn-link text-dark Oz">Logout</button>
+            <button type="submit" class="nav-link btn btn-link p-0 pl-3 text-dark Oz">Logout</button>
         </form>
     </li>
 }
