--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,13 +7,14 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Dear Coder | Tech Letters from Kasey</title>
-        <link rel="icon" type="image/png" href="~/img/favicon-32x32.png"/>
+        <link rel="icon" type="image/png" href="~/img/favicon-32x32.png" />
         <!-- font awesome icons (free version)-->
         <script src="//use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
         <!-- google fonts-->
         <link href="//fonts.googleapis.com/css?family=lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="//fonts.googleapis.com/css?family=open+sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css2?family=Enriqueta:wght@400;600&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
         <!-- core theme css (includes bootstrap)-->
         <link href="~/css/styles.css" rel="stylesheet" />
         <link href="~/css/summernote-bs4.css" rel="stylesheet" />
@@ -56,10 +57,10 @@
                 <div class="row">
                     <div class="col-lg-8 col-md-10 mx-auto">
                         <div class="site-heading">
-                            <h1 class="text-dark Enriqueta mb-1">@ViewData["HeaderText"],</h1>
+                            <h1 class="text-dark animate__animated animate__flipInX Enriqueta mb-1">@ViewData["HeaderText"],</h1>
                             <br />
                             <br />
-                            <span class="subheading text-dark font-weight-bold Enriqueta">@ViewData["SubheaderText"]</span>
+                            <span class="subheading text-dark font-weight-bold Enriqueta animate__animated animate__flipInX animate__delay-1s">@ViewData["SubheaderText"]</span>
                         </div>
                     </div>
                 </div>
