Fixed edit and pagination issues.

--- a/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -7,6 +7,9 @@
     {
         Layout = "/Areas/Identity/Pages/_Layout.cshtml";
     }
+
+    ViewData["HeaderText"] = "Dear Coder";
+    ViewData["SubheaderText"] = "Look! It's your account.";
 }
 
 <h2>Manage your account</h2>
