--- a/wwwroot/css/CustomStyle.css
+++ b/wwwroot/css/CustomStyle.css
@@ -15,3 +15,11 @@ body {
 h1, h2, h3, h4, h5 {
     font-family: 'Oswald', sans-serif !important;
 }
+
+.card-category {
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    font-size: larger;
+}
